// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(1) Default render 1`] = `
<div
  className="delegated-vesting-content"
>
  <div
    className="user-list"
  >
    <div
      className="list-body"
    >
      <div
        className="list-item"
      >
        <div
          className="item-main"
        >
          <a
            href="/@user2"
            onClick={[Function]}
          >
            <span
              className="user-avatar small"
              onClick={[Function]}
              style={
                Object {
                  "backgroundImage": "url(https://images.ecency.com/u/user2/avatar/small)",
                }
              }
            />
          </a>
          <div
            className="item-info"
          >
            <a
              href="/@user2"
              onClick={[Function]}
            >
              <span
                className="item-name notranslate"
              >
                user2
              </span>
            </a>
          </div>
        </div>
        <div
          className="item-extra"
        >
          <span
            title="191778.000000 VESTS"
          >
            98.527 HP
          </span>
        </div>
      </div>
      <div
        className="list-item"
      >
        <div
          className="item-main"
        >
          <a
            href="/@user3"
            onClick={[Function]}
          >
            <span
              className="user-avatar small"
              onClick={[Function]}
              style={
                Object {
                  "backgroundImage": "url(https://images.ecency.com/u/user3/avatar/small)",
                }
              }
            />
          </a>
          <div
            className="item-info"
          >
            <a
              href="/@user3"
              onClick={[Function]}
            >
              <span
                className="item-name notranslate"
              >
                user3
              </span>
            </a>
          </div>
        </div>
        <div
          className="item-extra"
        >
          <span
            title="29326.000000 VESTS"
          >
            15.066 HP
          </span>
        </div>
      </div>
      <div
        className="list-item"
      >
        <div
          className="item-main"
        >
          <a
            href="/@user4"
            onClick={[Function]}
          >
            <span
              className="user-avatar small"
              onClick={[Function]}
              style={
                Object {
                  "backgroundImage": "url(https://images.ecency.com/u/user4/avatar/small)",
                }
              }
            />
          </a>
          <div
            className="item-info"
          >
            <a
              href="/@user4"
              onClick={[Function]}
            >
              <span
                className="item-name notranslate"
              >
                user4
              </span>
            </a>
          </div>
        </div>
        <div
          className="item-extra"
        >
          <span
            title="27751.000000 VESTS"
          >
            14.257 HP
          </span>
        </div>
      </div>
      <div
        className="list-item"
      >
        <div
          className="item-main"
        >
          <a
            href="/@user1"
            onClick={[Function]}
          >
            <span
              className="user-avatar small"
              onClick={[Function]}
              style={
                Object {
                  "backgroundImage": "url(https://images.ecency.com/u/user1/avatar/small)",
                }
              }
            />
          </a>
          <div
            className="item-info"
          >
            <a
              href="/@user1"
              onClick={[Function]}
            >
              <span
                className="item-name notranslate"
              >
                user1
              </span>
            </a>
          </div>
        </div>
        <div
          className="item-extra"
        >
          <span
            title="14848.000000 VESTS"
          >
            7.628 HP
          </span>
        </div>
      </div>
      <div
        className="list-item"
      >
        <div
          className="item-main"
        >
          <a
            href="/@user5"
            onClick={[Function]}
          >
            <span
              className="user-avatar small"
              onClick={[Function]}
              style={
                Object {
                  "backgroundImage": "url(https://images.ecency.com/u/user5/avatar/small)",
                }
              }
            />
          </a>
          <div
            className="item-info"
          >
            <a
              href="/@user5"
              onClick={[Function]}
            >
              <span
                className="item-name notranslate"
              >
                user5
              </span>
            </a>
          </div>
        </div>
        <div
          className="item-extra"
        >
          <span
            title="1957.888055 VESTS"
          >
            1.006 HP
          </span>
        </div>
      </div>
    </div>
    <ul
      className="mt-4 pagination"
    >
      <li
        className="page-item disabled"
      >
        <span
          className="page-link"
          disabled={true}
          onClick={[Function]}
        >
          <span
            aria-hidden="true"
          >
            «
          </span>
          <span
            className="sr-only"
          >
            First
          </span>
        </span>
      </li>
      <li
        className="page-item disabled"
      >
        <span
          className="page-link"
          disabled={true}
          onClick={[Function]}
        >
          <span
            aria-hidden="true"
          >
            ‹
          </span>
          <span
            className="sr-only"
          >
            Previous
          </span>
        </span>
      </li>
      <li
        className="page-item active"
      >
        <span
          className="page-link"
          disabled={false}
          onClick={[Function]}
        >
          1
          <span
            className="sr-only"
          >
            (current)
          </span>
        </span>
      </li>
      <li
        className="page-item disabled"
      >
        <span
          className="page-link"
          disabled={true}
          onClick={[Function]}
        >
          <span
            aria-hidden="true"
          >
            ›
          </span>
          <span
            className="sr-only"
          >
            Next
          </span>
        </span>
      </li>
      <li
        className="page-item disabled"
      >
        <span
          className="page-link"
          disabled={true}
          onClick={[Function]}
        >
          <span
            aria-hidden="true"
          >
            »
          </span>
          <span
            className="sr-only"
          >
            Last
          </span>
        </span>
      </li>
    </ul>
  </div>
</div>
`;

exports[`(2) With active user 1`] = `
<div
  className="delegated-vesting-content"
>
  <div
    className="user-list"
  >
    <div
      className="list-body"
    >
      <div
        className="list-item"
      >
        <div
          className="item-main"
        >
          <a
            href="/@user2"
            onClick={[Function]}
          >
            <span
              className="user-avatar small"
              onClick={[Function]}
              style={
                Object {
                  "backgroundImage": "url(https://images.ecency.com/u/user2/avatar/small)",
                }
              }
            />
          </a>
          <div
            className="item-info"
          >
            <a
              href="/@user2"
              onClick={[Function]}
            >
              <span
                className="item-name notranslate"
              >
                user2
              </span>
            </a>
          </div>
        </div>
        <div
          className="item-extra"
        >
          <span
            title="191778.000000 VESTS"
          >
            98.527 HP
          </span>
        </div>
      </div>
      <div
        className="list-item"
      >
        <div
          className="item-main"
        >
          <a
            href="/@user3"
            onClick={[Function]}
          >
            <span
              className="user-avatar small"
              onClick={[Function]}
              style={
                Object {
                  "backgroundImage": "url(https://images.ecency.com/u/user3/avatar/small)",
                }
              }
            />
          </a>
          <div
            className="item-info"
          >
            <a
              href="/@user3"
              onClick={[Function]}
            >
              <span
                className="item-name notranslate"
              >
                user3
              </span>
            </a>
          </div>
        </div>
        <div
          className="item-extra"
        >
          <span
            title="29326.000000 VESTS"
          >
            15.066 HP
          </span>
        </div>
      </div>
      <div
        className="list-item"
      >
        <div
          className="item-main"
        >
          <a
            href="/@user4"
            onClick={[Function]}
          >
            <span
              className="user-avatar small"
              onClick={[Function]}
              style={
                Object {
                  "backgroundImage": "url(https://images.ecency.com/u/user4/avatar/small)",
                }
              }
            />
          </a>
          <div
            className="item-info"
          >
            <a
              href="/@user4"
              onClick={[Function]}
            >
              <span
                className="item-name notranslate"
              >
                user4
              </span>
            </a>
          </div>
        </div>
        <div
          className="item-extra"
        >
          <span
            title="27751.000000 VESTS"
          >
            14.257 HP
          </span>
        </div>
      </div>
      <div
        className="list-item"
      >
        <div
          className="item-main"
        >
          <a
            href="/@user1"
            onClick={[Function]}
          >
            <span
              className="user-avatar small"
              onClick={[Function]}
              style={
                Object {
                  "backgroundImage": "url(https://images.ecency.com/u/user1/avatar/small)",
                }
              }
            />
          </a>
          <div
            className="item-info"
          >
            <a
              href="/@user1"
              onClick={[Function]}
            >
              <span
                className="item-name notranslate"
              >
                user1
              </span>
            </a>
          </div>
        </div>
        <div
          className="item-extra"
        >
          <span
            title="14848.000000 VESTS"
          >
            7.628 HP
          </span>
        </div>
      </div>
      <div
        className="list-item"
      >
        <div
          className="item-main"
        >
          <a
            href="/@user5"
            onClick={[Function]}
          >
            <span
              className="user-avatar small"
              onClick={[Function]}
              style={
                Object {
                  "backgroundImage": "url(https://images.ecency.com/u/user5/avatar/small)",
                }
              }
            />
          </a>
          <div
            className="item-info"
          >
            <a
              href="/@user5"
              onClick={[Function]}
            >
              <span
                className="item-name notranslate"
              >
                user5
              </span>
            </a>
          </div>
        </div>
        <div
          className="item-extra"
        >
          <span
            title="1957.888055 VESTS"
          >
            1.006 HP
          </span>
        </div>
      </div>
    </div>
    <ul
      className="mt-4 pagination"
    >
      <li
        className="page-item disabled"
      >
        <span
          className="page-link"
          disabled={true}
          onClick={[Function]}
        >
          <span
            aria-hidden="true"
          >
            «
          </span>
          <span
            className="sr-only"
          >
            First
          </span>
        </span>
      </li>
      <li
        className="page-item disabled"
      >
        <span
          className="page-link"
          disabled={true}
          onClick={[Function]}
        >
          <span
            aria-hidden="true"
          >
            ‹
          </span>
          <span
            className="sr-only"
          >
            Previous
          </span>
        </span>
      </li>
      <li
        className="page-item active"
      >
        <span
          className="page-link"
          disabled={false}
          onClick={[Function]}
        >
          1
          <span
            className="sr-only"
          >
            (current)
          </span>
        </span>
      </li>
      <li
        className="page-item disabled"
      >
        <span
          className="page-link"
          disabled={true}
          onClick={[Function]}
        >
          <span
            aria-hidden="true"
          >
            ›
          </span>
          <span
            className="sr-only"
          >
            Next
          </span>
        </span>
      </li>
      <li
        className="page-item disabled"
      >
        <span
          className="page-link"
          disabled={true}
          onClick={[Function]}
        >
          <span
            aria-hidden="true"
          >
            »
          </span>
          <span
            className="sr-only"
          >
            Last
          </span>
        </span>
      </li>
    </ul>
  </div>
</div>
`;

exports[`(3) With delegator active user 1`] = `
<div
  className="delegated-vesting-content"
>
  <div
    className="user-list"
  >
    <div
      className="list-body"
    >
      <div
        className="list-item"
      >
        <div
          className="item-main"
        >
          <a
            href="/@user2"
            onClick={[Function]}
          >
            <span
              className="user-avatar small"
              onClick={[Function]}
              style={
                Object {
                  "backgroundImage": "url(https://images.ecency.com/u/user2/avatar/small)",
                }
              }
            />
          </a>
          <div
            className="item-info"
          >
            <a
              href="/@user2"
              onClick={[Function]}
            >
              <span
                className="item-name notranslate"
              >
                user2
              </span>
            </a>
          </div>
        </div>
        <div
          className="item-extra"
        >
          <span
            title="191778.000000 VESTS"
          >
            98.527 HP
          </span>
          <div
            className="main"
          >
            <div
              onClick={[Function]}
            >
              <a
                className="undelegate"
                href="#"
                onClick={[Function]}
              >
                undelegate
              </a>
            </div>
          </div>
        </div>
      </div>
      <div
        className="list-item"
      >
        <div
          className="item-main"
        >
          <a
            href="/@user3"
            onClick={[Function]}
          >
            <span
              className="user-avatar small"
              onClick={[Function]}
              style={
                Object {
                  "backgroundImage": "url(https://images.ecency.com/u/user3/avatar/small)",
                }
              }
            />
          </a>
          <div
            className="item-info"
          >
            <a
              href="/@user3"
              onClick={[Function]}
            >
              <span
                className="item-name notranslate"
              >
                user3
              </span>
            </a>
          </div>
        </div>
        <div
          className="item-extra"
        >
          <span
            title="29326.000000 VESTS"
          >
            15.066 HP
          </span>
          <div
            className="main"
          >
            <div
              onClick={[Function]}
            >
              <a
                className="undelegate"
                href="#"
                onClick={[Function]}
              >
                undelegate
              </a>
            </div>
          </div>
        </div>
      </div>
      <div
        className="list-item"
      >
        <div
          className="item-main"
        >
          <a
            href="/@user4"
            onClick={[Function]}
          >
            <span
              className="user-avatar small"
              onClick={[Function]}
              style={
                Object {
                  "backgroundImage": "url(https://images.ecency.com/u/user4/avatar/small)",
                }
              }
            />
          </a>
          <div
            className="item-info"
          >
            <a
              href="/@user4"
              onClick={[Function]}
            >
              <span
                className="item-name notranslate"
              >
                user4
              </span>
            </a>
          </div>
        </div>
        <div
          className="item-extra"
        >
          <span
            title="27751.000000 VESTS"
          >
            14.257 HP
          </span>
          <div
            className="main"
          >
            <div
              onClick={[Function]}
            >
              <a
                className="undelegate"
                href="#"
                onClick={[Function]}
              >
                undelegate
              </a>
            </div>
          </div>
        </div>
      </div>
      <div
        className="list-item"
      >
        <div
          className="item-main"
        >
          <a
            href="/@user1"
            onClick={[Function]}
          >
            <span
              className="user-avatar small"
              onClick={[Function]}
              style={
                Object {
                  "backgroundImage": "url(https://images.ecency.com/u/user1/avatar/small)",
                }
              }
            />
          </a>
          <div
            className="item-info"
          >
            <a
              href="/@user1"
              onClick={[Function]}
            >
              <span
                className="item-name notranslate"
              >
                user1
              </span>
            </a>
          </div>
        </div>
        <div
          className="item-extra"
        >
          <span
            title="14848.000000 VESTS"
          >
            7.628 HP
          </span>
          <div
            className="main"
          >
            <div
              onClick={[Function]}
            >
              <a
                className="undelegate"
                href="#"
                onClick={[Function]}
              >
                undelegate
              </a>
            </div>
          </div>
        </div>
      </div>
      <div
        className="list-item"
      >
        <div
          className="item-main"
        >
          <a
            href="/@user5"
            onClick={[Function]}
          >
            <span
              className="user-avatar small"
              onClick={[Function]}
              style={
                Object {
                  "backgroundImage": "url(https://images.ecency.com/u/user5/avatar/small)",
                }
              }
            />
          </a>
          <div
            className="item-info"
          >
            <a
              href="/@user5"
              onClick={[Function]}
            >
              <span
                className="item-name notranslate"
              >
                user5
              </span>
            </a>
          </div>
        </div>
        <div
          className="item-extra"
        >
          <span
            title="1957.888055 VESTS"
          >
            1.006 HP
          </span>
          <div
            className="main"
          >
            <div
              onClick={[Function]}
            >
              <a
                className="undelegate"
                href="#"
                onClick={[Function]}
              >
                undelegate
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
    <ul
      className="mt-4 pagination"
    >
      <li
        className="page-item disabled"
      >
        <span
          className="page-link"
          disabled={true}
          onClick={[Function]}
        >
          <span
            aria-hidden="true"
          >
            «
          </span>
          <span
            className="sr-only"
          >
            First
          </span>
        </span>
      </li>
      <li
        className="page-item disabled"
      >
        <span
          className="page-link"
          disabled={true}
          onClick={[Function]}
        >
          <span
            aria-hidden="true"
          >
            ‹
          </span>
          <span
            className="sr-only"
          >
            Previous
          </span>
        </span>
      </li>
      <li
        className="page-item active"
      >
        <span
          className="page-link"
          disabled={false}
          onClick={[Function]}
        >
          1
          <span
            className="sr-only"
          >
            (current)
          </span>
        </span>
      </li>
      <li
        className="page-item disabled"
      >
        <span
          className="page-link"
          disabled={true}
          onClick={[Function]}
        >
          <span
            aria-hidden="true"
          >
            ›
          </span>
          <span
            className="sr-only"
          >
            Next
          </span>
        </span>
      </li>
      <li
        className="page-item disabled"
      >
        <span
          className="page-link"
          disabled={true}
          onClick={[Function]}
        >
          <span
            aria-hidden="true"
          >
            »
          </span>
          <span
            className="sr-only"
          >
            Last
          </span>
        </span>
      </li>
    </ul>
  </div>
</div>
`;

exports[`(4) Empty List 1`] = `
<div
  className="delegated-vesting-content"
>
  <div
    className="user-list"
  >
    <div
      className="list-body"
    >
      <div
        className="empty-list"
      >
        Nothing here
      </div>
    </div>
    <ul
      className="mt-4 pagination"
    >
      <li
        className="page-item disabled"
      >
        <span
          className="page-link"
          disabled={true}
          onClick={[Function]}
        >
          <span
            aria-hidden="true"
          >
            «
          </span>
          <span
            className="sr-only"
          >
            First
          </span>
        </span>
      </li>
      <li
        className="page-item disabled"
      >
        <span
          className="page-link"
          disabled={true}
          onClick={[Function]}
        >
          <span
            aria-hidden="true"
          >
            ‹
          </span>
          <span
            className="sr-only"
          >
            Previous
          </span>
        </span>
      </li>
      <li
        className="page-item disabled"
      >
        <span
          className="page-link"
          disabled={true}
          onClick={[Function]}
        >
          <span
            aria-hidden="true"
          >
            ›
          </span>
          <span
            className="sr-only"
          >
            Next
          </span>
        </span>
      </li>
      <li
        className="page-item disabled"
      >
        <span
          className="page-link"
          disabled={true}
          onClick={[Function]}
        >
          <span
            aria-hidden="true"
          >
            »
          </span>
          <span
            className="sr-only"
          >
            Last
          </span>
        </span>
      </li>
    </ul>
  </div>
</div>
`;
